--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "axios": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,4 +39,3 @@
     "react-router-dom": "^5.2.0"
   }
 }
-
