--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto=update
+task.manager.jwtSecret=======================Spring=Security===========================
