--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto=update
 task.manager.jwtSecret=======================Spring=Security===========================
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=afterady
