Add MongoDbConfig that adds schema validator to collection advice, change Advice.category to enum, update test data according to new schema

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,4 @@ task.manager.jwtSecret=======================Spring=Security====================
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=afterady
+mongodb.schema.file.path=src/main/resources/db/nosql-schema.json
