Implement API endpoint for suggesting advice

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,4 +8,5 @@ task.manager.jwtSecret=======================Spring=Security====================
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=afterady
-mongodb.schema.file.path=src/main/resources/db/nosql-schema.json
+mongodb.advice.schema.file.path=src/main/resources/db/advice-schema.json
+mongodb.suggestedAdvice.schema.file.path=src/main/resources/db/suggestedAdvice-schema.json
