Add running integration tests step to github action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,6 @@ jobs:
     - name: Build with Maven
       working-directory: ./afterady-backend
       run: mvn -B package --file pom.xml
+    - name: Run integration tests
+      working-directory: ./afterady-backend
+      run: mvn verify
