--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,15 +23,9 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: "17"
+        distribution: "temurin"
         cache: maven
-    - name: Build with Maven
-      working-directory: ./afterady-backend
-      run: mvn -B package --file pom.xml
-    - name: Run integration tests
-      working-directory: ./afterady-backend
-      run: mvn verify
-    # - name: Run integration tests
-    # working-directory: ./afterady-backend
-    # run: mvn verify
+      # - name: Build with Maven
+      #   working-directory: ./afterady-backend
+      #   run: mvn -B package --file pom.xml
