--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,9 +23,12 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-        java-version: "17"
-        distribution: "temurin"
-        cache: maven
-      # - name: Build with Maven
+          java-version: "17"
+          distribution: "temurin"
+          cache: maven
+      - name: Build with Maven
+        working-directory: ./afterady-backend
+        run: mvn -B package --file pom.xml
+      # - name: Run integration tests
       #   working-directory: ./afterady-backend
-      #   run: mvn -B package --file pom.xml
+      #   run: mvn verify
