--- a/.env_template
+++ b/.env_template
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=CHANGE
-VITE_HCAPTCHA_SITE_KEY=CHANGE
+VITE_BACKEND_URL=http://localhost:8080/
+VITE_HCAPTCHA_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
